@@ -1,4 +1,3 @@
-bin/pyx2graphviz
 Changes
 examples/ex1.pl
 inc/Module/Install.pm
